kubernetes/home/apps/default/syncthing/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing.shaklab.com`, `sync.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: syncthing
          port: 8384
  tls:
    secretName: shaklab-com-tls-certs
